--- a/angular/package.json
+++ b/angular/package.json
@@ -4,14 +4,20 @@
   "description": "A simple blog to be performance tested agains react-redux",
   "main": "index.js",
   "dependencies": {
-    "angular": "^1.5.5"
+    "angular": "^1.5.5",
+    "angular-route": "^1.5.5",
+    "angular-resource" : "^1.5.5"
   },
   "devDependencies": {
     "angular": "^1.5.5",
-    "angular-ui-router": "^0.3.0"
+    "angular-route": "^1.5.5",
+    "angular-resource" : "^1.5.5",
+    "http-server": "^0.9.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "npm install",
+    "start": "http-server -a 0.0.0.0 -p 8000"
   },
   "author": "Johnny Pesola",
   "license": "ISC"
