--- a/angular/package.json
+++ b/angular/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "angular": "^1.5.5",
     "angular-route": "^1.5.5",
-    "angular-resource" : "^1.5.5"
+    "angular-resource" : "^1.5.5",
+    "http-server": "^0.9.0"
   },
   "devDependencies": {
     "angular": "^1.5.5",
