--- a/react-router-redux/package.json
+++ b/react-router-redux/package.json
@@ -9,7 +9,8 @@
     "react-redux": "^4.3.0",
     "react-router": "^2.0.0",
     "redux": "^3.2.1",
-    "react-router-redux": "^4.0.0"
+    "react-router-redux": "^4.0.0",
+    "http-server": "^0.9.0"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
@@ -25,9 +26,13 @@
     "redux-devtools-dock-monitor": "^1.0.1",
     "redux-devtools-log-monitor": "^1.0.4",
     "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "http-server": "^0.9.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --history-api-fallback --no-info --open"
+    "prestart": "npm install",
+    "start": "http-server -a 0.0.0.0 -p 8000",
+    "devstart": "webpack-dev-server --history-api-fallback --no-info --open",
+    "build": "webpack -p --progress --colors"
   }
 }
