--- a/react-router-redux/package.json
+++ b/react-router-redux/package.json
@@ -4,13 +4,14 @@
   "repository": "reactjs/react-router-redux",
   "license": "MIT",
   "dependencies": {
+    "http-server": "^0.9.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.3.0",
     "react-router": "^2.0.0",
-    "redux": "^3.2.1",
     "react-router-redux": "^4.0.0",
-    "http-server": "^0.9.0"
+    "redux": "^3.2.1",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
