--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ angular/bower_components/
 angular/angular-phonecat/
 testing-software/
 react-router-redux/node_modules/
+react-router-redux_attempt_2/node_modules/
 react-router-redux/.idea
+redux-examples/
 .idea
 npm-debug.log
