--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ angular/angular-phonecat/
 testing-software/
 react-router-redux/node_modules/
 react-router-redux_attempt_2/node_modules/
+react-router-redux_attempt_3/node_modules/
 react-router-redux/.idea
 redux-examples/
 .idea
