--- a/react-router-redux_attempt_3/package.json
+++ b/react-router-redux_attempt_3/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "description": "Redux async example",
   "scripts": {
-    "start": "node server.js"
+    "prestart": "npm install",
+    "start": "http-server -a 0.0.0.0 -p 8000",
+    "devstart": "node server.js",
+    "build": "webpack -p --progress --colors"
   },
   "repository": {
     "type": "git",
@@ -35,7 +38,8 @@
     "react-router-redux": "^4.0.4",
     "redux": "^3.2.1",
     "redux-logger": "^2.4.0",
-    "redux-thunk": "^1.0.3"
+    "redux-thunk": "^1.0.3",
+    "http-server": "^0.9.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.15",
@@ -48,6 +52,7 @@
     "node-libs-browser": "^0.5.2",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.9.1"
+    "webpack-hot-middleware": "^2.9.1",
+    "http-server": "^0.9.0"
   }
 }
