--- a/react-router-redux/.babelrc
+++ b/react-router-redux/.babelrc
@@ -1,3 +1,8 @@
 {
-    "presets": ["es2015", "react", "stage-1"]
+  "presets": ["es2015", "react"],
+  "env": {
+    "development": {
+      "presets": ["react-hmre"]
+    }
+  }
 }
