--- a/react-router-redux/package.json
+++ b/react-router-redux/package.json
@@ -1,39 +1,58 @@
 {
-  "name": "rrr-basic-example",
+  "name": "redux-async-example",
   "version": "0.0.0",
-  "repository": "reactjs/react-router-redux",
-  "license": "MIT",
-  "dependencies": {
-    "http-server": "^0.9.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.3.0",
-    "react-router": "^2.0.0",
-    "react-router-redux": "^4.0.0",
-    "redux": "^3.2.1",
-    "redux-thunk": "^2.1.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.9.0",
-    "babel-eslint": "^5.0.0-beta9",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "eslint": "^1.10.3",
-    "eslint-config-rackt": "^1.1.1",
-    "eslint-plugin-react": "^3.16.1",
-    "redux-devtools": "^3.1.0",
-    "redux-devtools-dock-monitor": "^1.0.1",
-    "redux-devtools-log-monitor": "^1.0.4",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
-    "http-server": "^0.9.0"
-  },
+  "description": "Redux async example",
   "scripts": {
     "prestart": "npm install",
     "start": "http-server -a 0.0.0.0 -p 8000",
-    "devstart": "webpack-dev-server --history-api-fallback --no-info --open",
+    "devstart": "node server.js",
     "build": "webpack -p --progress --colors"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/reactjs/redux.git"
+  },
+  "keywords": [
+    "react",
+    "reactjs",
+    "hot",
+    "reload",
+    "hmr",
+    "live",
+    "edit",
+    "webpack",
+    "flux"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/reactjs/redux/issues"
+  },
+  "homepage": "http://redux.js.org",
+  "dependencies": {
+    "babel-polyfill": "^6.3.14",
+    "isomorphic-fetch": "^2.1.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.2.1",
+    "react-router": "^2.4.1",
+    "react-router-redux": "^4.0.4",
+    "redux": "^3.2.1",
+    "redux-logger": "^2.4.0",
+    "redux-thunk": "^1.0.3",
+    "http-server": "^0.9.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.3.15",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.1.1",
+    "expect": "^1.6.0",
+    "express": "^4.13.3",
+    "node-libs-browser": "^0.5.2",
+    "webpack": "^1.9.11",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.9.1",
+    "http-server": "^0.9.0"
   }
 }
