--- a/react-router-redux/package.json
+++ b/react-router-redux/package.json
@@ -47,12 +47,13 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-1": "^6.5.0",
     "expect": "^1.6.0",
     "express": "^4.13.3",
+    "http-server": "^0.9.0",
     "node-libs-browser": "^0.5.2",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.9.1",
-    "http-server": "^0.9.0"
+    "webpack-hot-middleware": "^2.9.1"
   }
 }
